--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>--------</title>
   <style>
-    html,body{-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;text-size-adjust:none;}
+    html,body{-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: 100%;text-size-adjust:100%;}
     body{overflow-x: hidden;width: 100vw;}
     input,button{outline: 0;}
     a{text-decoration: none;}
