--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -9,23 +9,51 @@
   <title>--------</title>
   <style>
     html,body{-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: 100%;text-size-adjust:100%;}
-    body{overflow-x: hidden;width: 100vw;}
+    body{overflow-x: hidden;width: 100vw;margin: 0;padding: 0;}
     input,button{outline: 0;}
-    a{text-decoration: none;}
-    h1,h2,h3,h4,h5,h6,ul,li{margin: 0;padding: 0;}
+    a{text-decoration: none;-webkit-tap-highlight-color: transparent;}
+    .clearfix{*zoom: 1;/* ie 6/7 */}
+    .clearfix:before, .clearfix:after{ content: " ";display: table; }
+    .clearfix:after{clear: both;}
+    h1,h2,h3,h4,h5,h6,p,ul,li{margin: 0;padding: 0;}
     img{vertical-align: middle;}
     input[type="submit"],input[type="reset"],input[type="button"],button {-webkit-appearance: none;}
+    .fl{float: left;} .fr{float: right;}
+    .font-ellipsis{text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
+    .fcolor_grey{color: #999;}
   </style>
   <script>
-    !function(a,b){function c(){var b=f.getBoundingClientRect().width;b/i>540&&(b=540*i);var c=b/10;f.style.fontSize=c+"px",k.rem=a.rem=c}var d,e=a.document,f=e.documentElement,g=e.querySelector('meta[name="viewport"]'),h=e.querySelector('meta[name="flexible"]'),i=0,j=0,k=b.flexible||(b.flexible={});if(g){console.warn("将根据已有的meta标签来设置缩放比例");var l=g.getAttribute("content").match(/initial\-scale=([\d\.]+)/);l&&(j=parseFloat(l[1]),i=parseInt(1/j))}else if(h){var m=h.getAttribute("content");if(m){var n=m.match(/initial\-dpr=([\d\.]+)/),o=m.match(/maximum\-dpr=([\d\.]+)/);n&&(i=parseFloat(n[1]),j=parseFloat((1/i).toFixed(2))),o&&(i=parseFloat(o[1]),j=parseFloat((1/i).toFixed(2)))}}if(!i&&!j){var p=(a.navigator.appVersion.match(/android/gi),a.navigator.appVersion.match(/iphone/gi)),q=a.devicePixelRatio;i=p?q>=3&&(!i||i>=3)?3:q>=2&&(!i||i>=2)?2:1:1,j=1/i}if(f.setAttribute("data-dpr",i),!g)if(g=e.createElement("meta"),g.setAttribute("name","viewport"),g.setAttribute("content","initial-scale="+j+", maximum-scale="+j+", minimum-scale="+j+", user-scalable=no"),f.firstElementChild)f.firstElementChild.appendChild(g);else{var r=e.createElement("div");r.appendChild(g),e.write(r.innerHTML)}a.addEventListener("resize",function(){clearTimeout(d),d=setTimeout(c,300)},!1),a.addEventListener("pageshow",function(a){a.persisted&&(clearTimeout(d),d=setTimeout(c,300))},!1),"complete"===e.readyState?e.body.style.fontSize=12*i+"px":e.addEventListener("DOMContentLoaded",function(){e.body.style.fontSize=12*i+"px"},!1),c(),k.dpr=a.dpr=i,k.refreshRem=c,k.rem2px=function(a){var b=parseFloat(a)*this.rem;return"string"==typeof a&&a.match(/rem$/)&&(b+="px"),b},k.px2rem=function(a){var b=parseFloat(a)/this.rem;return"string"==typeof a&&a.match(/px$/)&&(b+="rem"),b}}(window,window.lib||(window.lib={}));    
+    !function(a,b){function c(){var b=f.getBoundingClientRect().width;b/i>540&&(b=540*i);var c=b/10;f.style.fontSize=c+"px",k.rem=a.rem=c}var d,e=a.document,f=e.documentElement,g=e.querySelector('meta[name="viewport"]'),h=e.querySelector('meta[name="flexible"]'),i=0,j=0,k=b.flexible||(b.flexible={});if(g){console.warn("将根据已有的meta标签来设置缩放比例");var l=g.getAttribute("content").match(/initial\-scale=([\d\.]+)/);l&&(j=parseFloat(l[1]),i=parseInt(1/j))}else if(h){var m=h.getAttribute("content");if(m){var n=m.match(/initial\-dpr=([\d\.]+)/),o=m.match(/maximum\-dpr=([\d\.]+)/);n&&(i=parseFloat(n[1]),j=parseFloat((1/i).toFixed(2))),o&&(i=parseFloat(o[1]),j=parseFloat((1/i).toFixed(2)))}}if(!i&&!j){var q=a.devicePixelRatio,u=q.toString().match(/^[1-9]\d*$/g);i=u?q>=3&&(!i||i>=3)?3:q>=2&&(!i||i>=2)?2:1:1,j=1/i}if(f.setAttribute("data-dpr",i),!g)if(g=e.createElement("meta"),g.setAttribute("name","viewport"),g.setAttribute("content","initial-scale="+j+", maximum-scale="+j+", minimum-scale="+j+", user-scalable=no"),f.firstElementChild)f.firstElementChild.appendChild(g);else{var r=e.createElement("div");r.appendChild(g),e.write(r.innerHTML)}a.addEventListener("resize",function(){clearTimeout(d),d=setTimeout(c,300)},!1),a.addEventListener("pageshow",function(a){a.persisted&&(clearTimeout(d),d=setTimeout(c,300))},!1),"complete"===e.readyState?e.body.style.fontSize=12*i+"px":e.addEventListener("DOMContentLoaded",function(){e.body.style.fontSize=12*i+"px"},!1),c(),k.dpr=a.dpr=i,k.refreshRem=c,k.rem2px=function(a){var b=parseFloat(a)*this.rem;return"string"==typeof a&&a.match(/rem$/)&&(b+="px"),b},k.px2rem=function(a){var b=parseFloat(a)/this.rem;return"string"==typeof a&&a.match(/px$/)&&(b+="rem"),b}}(window,window.lib||(window.lib={}));
   </script>
   <style>
-
+    .cardview{background-color: #fff;box-shadow: 0 .05rem .1rem rgba(0,0,0,.3);border-radius: .1rem;margin: .5rem;font-size: .2267rem;}
+    .card_header,.card_footer{padding: .5rem .75rem;font-size: .85rem;position: relative;}
+    .card_header{background-image: url(http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg);}
+    .card_content_inner{padding: .75rem;}
+    .card_content_inner p{font-size: .187rem;margin-bottom: 1em;}
+    .card_link{color: #0894ec;}
+    .card_footer:before{content: " ";width: 100%;height: 1px;display: block;background-color: #e1e1e1;position: absolute;top: 0;left: 0;right: 0;bottom: 0;}
   </style>
 </head>
 <body>
   <header></header>
-  <section></section>
+  <section>
+    <div class="cardview">
+      <div class="card_header font-ellipsis">
+        旅途的山旅途的山旅途的山旅途的山旅途的山旅途的山旅途的山旅途的山
+      </div>
+      <div class="card_content">
+        <div class="card_content_inner">
+          <p class="fcolor_grey">发表于 2015/01/15</p>
+          <p>此处是内容...</p>
+        </div>
+      </div>
+      <div class="card_footer clearfix">
+        <a href="#" class="card_link fl">赞</a>
+        <a href="#" class="card_link fr">更多</a>
+      </div>
+    </div>
+  </section>
   <footer></footer>
 </body>
 </html>
