--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -8,6 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>--------</title>
   <style>
+    html * {outline: 0;-webkit-text-size-adjust: none;-webkit-tap-highlight-color: rgba(0,0,0,0);}
     html,body{-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: 100%;text-size-adjust:100%;}
     body{overflow-x: hidden;width: 100vw;margin: 0;padding: 0;}
     input,button{outline: 0;}
