--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -34,6 +34,27 @@
     .card_content_inner p{font-size: .187rem;margin-bottom: 1em;}
     .card_link{color: #0894ec;}
     .card_footer:before{content: " ";width: 100%;height: 1px;display: block;background-color: #e1e1e1;position: absolute;top: 0;left: 0;right: 0;bottom: 0;}
+
+
+    /*mediaquery*/
+    @media screen and (max-device-width: 320px) {
+      /*code for width ip4 ip5*/
+    }
+    @media screen and (min-device-width: 375px) {
+      /*code for width ip6*/
+    }
+    @media screen and (min-device-width: 414px) {
+      /*code for width ip6 p*/
+    }
+    @media screen and (max-device-height: 480px) {
+      /*code for height ip4*/
+    }
+    @media screen and (max-device-height: 568px) and (min-device-height: 500px) {
+      /*ip5*/
+    }
+    @media screen and (min-device-height: 667px) {
+      /*ip6*/
+    }
   </style>
 </head>
 <body>
