添加font-size [data-dpr='2']

--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -35,6 +35,9 @@
     .card_link{color: #0894ec;}
     .card_footer:before{content: " ";width: 100%;height: 1px;display: block;background-color: #e1e1e1;position: absolute;top: 0;left: 0;right: 0;bottom: 0;}
 
+   .f16{fontsize:16px;}
+   [data-dpr="2"].f16{font-size:32px;}
+   [data-dpr="3"].f16{font-size:48px;}
 
     /*mediaquery*/
     @media screen and (max-device-width: 320px) {
