添加微信圆形问题

--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -39,6 +39,10 @@
    [data-dpr="2"].f16{font-size:32px;}
    [data-dpr="3"].f16{font-size:48px;}
 
+   .circle{width: 17px;height: 17px;display: block;margin: .5rem auto;background-color: #AB5050; border: 1px solid #000;border-radius: 50%;}
+   [data-dpr="2"].circle{width: 35px;height: 35px;}
+   [data-dpr="3"].circle{width: 54px;height: 54px;}
+
     /*mediaquery*/
     @media screen and (max-device-width: 320px) {
       /*code for width ip4 ip5*/
@@ -78,6 +82,9 @@
         <a href="#" class="card_link fr">更多</a>
       </div>
     </div>
+    <span class="circle"></span>
+
+    
   </section>
   <footer></footer>
 </body>
