--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -83,8 +83,7 @@
       </div>
     </div>
     <span class="circle"></span>
-
-    
+    <a href="http://www.baidu.com" class="">百度一下</a>
   </section>
   <footer></footer>
 </body>
