--- a/mb_smaple.html
+++ b/mb_smaple.html
@@ -106,6 +106,57 @@
       return false;
     });
   </script>
+  <script>
+    // 微信内打开提示
+    $(document).ready(function(){
+      var isWeChat = navigator.userAgent.match(/MicroMessenger/i)=="MicroMessenger";
+      if(isWeChat){
+        // dosomething
+      }
+    });
+
+    /**
+     * 浏览器版本信息
+     * @type {object}
+     */
+    function browser() {
+      var u = navigator.userAgent.toLowerCase();
+      var app = navigator.appVersion.toLowerCase();
+      return {
+        txt: u, // 浏览器版本信息
+        version: (u.match(/.+(?:rv|it|ra|ie)[\/: ]([\d.]+)/) || [])[1], // 版本号       
+        msie: /msie/.test(u) && !/opera/.test(u), // IE内核
+        mozilla: /mozilla/.test(u) && !/(compatible|webkit)/.test(u), // 火狐浏览器
+        safari: /safari/.test(u) && !/chrome/.test(u), //是否为safair
+        chrome: /chrome/.test(u), //是否为chrome
+        opera: /opera/.test(u), //是否为oprea
+        presto: u.indexOf('presto/') > -1, //opera内核
+        webKit: u.indexOf('applewebkit/') > -1, //苹果、谷歌内核
+        gecko: u.indexOf('gecko/') > -1 && u.indexOf('khtml') == -1, //火狐内核
+        mobile: !!u.match(/applewebkit.*mobile.*/), //是否为移动终端
+        ios: !!u.match(/\(i[^;]+;( u;)? cpu.+mac os x/), //ios终端
+        android: u.indexOf('android') > -1, //android终端
+        iPhone: u.indexOf('iphone') > -1, //是否为iPhone
+        iPad: u.indexOf('ipad') > -1, //是否iPad
+        webApp: !!u.match(/applewebkit.*mobile.*/) && u.indexOf('safari/') == -1 //是否web应用程序，没有头部与底部
+      }
+    }
+
+    var b = browser();
+    var t1 = new Date();
+    var windowObjectReference;
+    var parameter = window.location.search.length > 0 ? '&'+window.location.search.slice(1) : "";
+
+    if(b.ios||b.iPhone||b.iPad){
+      // ios
+    }else if(b.android){
+    }else{
+    }
+
+
+
+
+  </script>
 </body>
 </html>
     
